<resources>
    <string name="app_name">PersonasDiplomado</string>
    <string name="action_settings">Settings</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="agregarpersona">Agregar Persona</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="personaguardada">Persona guardada!</string>
    <string-array name="sexo">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string name="mensaje_guardado">Persona Guardada Exitosamente</string>
    <string name="datos">Datos</string>
    <string name="datospersonas">Datos de la Persona</string>
    <string name="sexo">Sexo</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="mensajeeliminar">¿Está seguro que desea eliminar a esta persona?</string>
    <string name="eliminarsi">Si</string>
    <string name="eliminarno">No</string>
    <string name="modificarpesona">Modificar datos</string>
    <string name="mensaje_error_cedula_existente">La cedula ya se encuentra registrada</string>
    <string name="mensaje_modificar">Persona Modificada existosamente</string>
    <string name="mensaje_foto">Seleccione la foto</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="email">Email</string>
    <string name="usuario_creado">Usuario creado exitosamente</string>
    <string name="crear">Crear</string>
    <string name="principal">Principal</string>
    <string name="salir">Salir</string>
    <string name="cerrar">Cerrar</string>
    <string name="abrir">Abrir</string>
</resources>
