<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textSize="18sp"
            android:textStyle="italic" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:textStyle="italic" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button5"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ingresar"
            android:text="@string/ingresar" />

        <Button
            android:id="@+id/button6"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="crear"
            android:text="@string/crear" />

    </LinearLayout>

</LinearLayout>